Details
-
Bug
-
Resolution: Fixed
-
Major
-
68,915
Description
E.g. in https://build.reactos.org/builders/Test%20KVM/builds/11597/steps/test/logs/stdio
lib/rtl/heap.c:2180 (RtlFreeHeap)
|
dll/win32/ole32/ifs.c:249 (IMalloc_fnFree)
|
dll/win32/ole32/ifs.c:398 (CoTaskMemFree)
|
dll/win32/shell32/wine/shellole.c:333 (SHFree)
|
dll/win32/shell32/wine/pidl.c:892 (ILFree)
|
dll/win32/shell32/CNewMenu.cpp:43 (~CNewMenu)
|
:0 (ATL::CComObject<CNewMenu>::~CComObject())
|
lib/atl/atlcom.h:156 (CComObject<CNewMenu>::Release)
|
/mnt/ramdisk/buildbot/output-MinGW-i386/reactos/ReactOS/modules/rostests/apitests/com/com_apitest.c:546 (TestClasses)
|
/mnt/ramdisk/buildbot/output-MinGW-i386/reactos/ReactOS/modules/rostests/apitests/com/shell32.c:584 (func_shell32)
|
include/reactos/wine/test.h:632 (main)
|
lib/sdk/crt/startup/crtexe.c:310 (__tmainCRTStartup)
|
lib/sdk/crt/startup/crtexe.c:202 (mainCRTStartup)
|
dll/win32/kernel32/client/proc.c:478 (BaseProcessStartup)
|
Attachments
Issue Links
- is duplicated by
-
CORE-10095 com:shell32 crashes
-
- Resolved
-