[SHELL32] - Initialize CNewMenu::m_pidlFolder. Fixes crash in com_apitest:shell32 CORE-10115 #resolve

svn path=/trunk/; revision=69048